// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ER > Options > TextBaseOption renders disabled input with type time 1`] = `
<div>
  <div
    class="tabSectionOption"
  >
    <div
      class="jsx-1141087211 "
      data-test="testing-prefix-input"
    >
      <label
        class="jsx-2718078600 disabled"
        data-test="testing-prefix-input-label"
        for="theTime"
      >
        <span
          class="jsx-2718078600"
        >
          Current time
        </span>
      </label>
      <div
        class="jsx-3111771310 "
        data-test="testing-prefix-input-content"
      >
        <div
          class="jsx-2908043323 "
          data-test="dhis2-uicore-box"
        >
          <div
            class="jsx-3353877153 jsx-2422099811 input"
            data-test="dhis2-uicore-input"
          >
            <input
              class="jsx-3353877153 jsx-2422099811 dense disabled"
              disabled=""
              id="theTime"
              name="theTime"
              placeholder="placeholder text"
              type="time"
              value="10:30"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ER > Options > TextBaseOption renders enabled input with type time 1`] = `
<div>
  <div
    class="tabSectionOption"
  >
    <div
      class="jsx-1141087211 "
      data-test="testing-prefix-input"
    >
      <label
        class="jsx-2718078600 "
        data-test="testing-prefix-input-label"
        for="theTime"
      >
        <span
          class="jsx-2718078600"
        >
          Current time
        </span>
      </label>
      <div
        class="jsx-3111771310 "
        data-test="testing-prefix-input-content"
      >
        <div
          class="jsx-2908043323 "
          data-test="dhis2-uicore-box"
        >
          <div
            class="jsx-3353877153 jsx-2422099811 input"
            data-test="dhis2-uicore-input"
          >
            <input
              class="jsx-3353877153 jsx-2422099811 dense"
              id="theTime"
              name="theTime"
              placeholder="placeholder text"
              type="time"
              value="10:30"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
